prevent horizontal scrolling on mobile

--- a/resources/css/screen/body.css
+++ b/resources/css/screen/body.css
@@ -25,6 +25,11 @@
 	overflow-y: clip;
 }
 
+html,
+body {
+	overflow-x: clip;
+}
+
 html {
 	scroll-padding-top: calc(var(--fixed-elements-height) + 32px);
 	scroll-behavior: smooth;
